--- a/Adhouse/templates/base.html
+++ b/Adhouse/templates/base.html
@@ -19,12 +19,18 @@
                     <li>
                         <a href="{% url 'home' %}">Home</a>
                     </li>
-                    <li>
-                        <a href="{% url 'signin' %}">Signin</a>
-                    </li>
-                    <li>
-                        <a href="{% url 'signup' %}">Signup</a>
-                    </li>
+                    {% if user.is_authenticated %}
+<li>
+    <a href="{% url 'auth_logout' %}">Logout</a>
+</li>
+{% else %}
+<li>
+    <a href="{% url 'auth_login' %}">Login</a>
+</li>
+<li>
+    <a href="{% url 'registration_register' %}">Register</a>
+</li>
+{% endif %}
                 </ul>
             </nav>
         </header>
