--- a/Adhouse/templates/registration/logout.html
+++ b/Adhouse/templates/registration/logout.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% block title %}
-    signin - {{ block.super }}
+    Logout - {{ block.super }}
 {% endblock title %}
 
 {% block content %}
-    <h1>signin page</h1>
-    <p>signin content.</p>
+    <h1>Logged Out</h1>
+    <p>You have been logged out!</p>
 {% endblock content %}
