--- a/Adhouse/templates/thing_detail.html
+++ b/Adhouse/templates/thing_detail.html
@@ -1,10 +1,16 @@
-{% extends 'base.html' %}
+    {% extends 'base.html' %}
 {% block title %}
-     {{ thing.name }} - {{ block.super }}
+    {{ thing.name }} - {{ block.super }}
 {% endblock title %}
 
 {% block content %}
     <h1>{{ thing.name }}</h1>
     <p>{{ thing.description }}</p>
-    <a href="{% url 'editadv' id=thing.id %}">Edit me!</>
-    {% endblock content %}
+    {% if user == thing.user %}
+        <p>
+            <a href="{% url 'editadv' id=thing.id %}">
+                Edit me!
+            </a>
+        </p>
+    {% endif %}
+{% endblock content %}
