--- a/Adhouse/templates/base.html
+++ b/Adhouse/templates/base.html
@@ -5,7 +5,7 @@
     <head>
         <title>
             {% block title %}
-                My Hello Web App Project
+                Ad house
             {% endblock title %}
         </title>
         <link rel="stylesheet" href="{% static 'css/style.css' %}" />
@@ -13,7 +13,7 @@
     </head>
     <body>
         <header>
-            <h1>Hello Web App</h1>
+            <h1>Welcome AdHouse</h1>
             <nav>
                 <ul>
                     <li>
